{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 14,
  "lineage": "3dd65fcb-8b03-eba7-2035-9527a67dacf3",
  "resources": [
    {
      "module": "module.eb",
      "mode": "data",
      "type": "aws_lb",
      "name": "eb_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}